Attempt to fix apple phone overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@
     box-sizing: border-box;
 }
 
-html, body {
+body {
     overflow-x: hidden;
     position: relative;
     height: 100%;
